--- a/starter-workflow-fod-sast-scan.yml
+++ b/starter-workflow-fod-sast-scan.yml
@@ -88,7 +88,7 @@ jobs:
           release-id: ${{ secrets.FOD_RELEASE_ID }}
           output: ./sarif/output.sarif
       
-      # Import Fortify on Demand results to GitHub Security Code Scanning
+      ## Import Fortify on Demand results to GitHub Security Code Scanning
       - name: Import Results
         uses: github/codeql-action/upload-sarif@v1
         with:
